add loans exceptions